fixed ios z-index bug for work-menu (on back button menu was appearing in the back of post)

--- a/_sass/floterink/work-list.scss
+++ b/_sass/floterink/work-list.scss
@@ -6,6 +6,9 @@ body {
 a {
 	cursor: url("/assets/img/arrow-cursor-pointer.svg"), pointer;
 }
+#swup {
+	transform: translate3d(0,0,0);
+}
 
 .site-header{
 	position: absolute;
@@ -203,21 +206,6 @@ body.about .work_list {
 	}
 }	
 
-.home .work_list_tile {
-	/* &:nth-child(1) {
-		grid-column: span 1;
-		grid-row-end: span 24;
-
-		@media (min-width: 800px) {
-			grid-column: span 1;
-			grid-row-end: span 28;
-		}
-	}
-	&:nth-child(3) {
-		grid-row-end: span 22;
-	} */
-}
-
 .work_list_tile_thumb {
 	width: 100%;
 	height: 100%;
@@ -306,10 +294,6 @@ body.about .work_list {
 		@media (min-width: 800px) {
 			margin-top: 2 * $spacing-unit;
 		}
-	}
-
-	&:last-child {
-		//margin-bottom: 0;
 	}
 }
 
